# Cucker_Smale_Modeling

./: CMakeLists.txt  README.md  axes.h  cucker_smale.h  functions.h  main.cpp  scale.h
